--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!-- <meta http-equiv="refresh" content="0; url=webMain.html" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href="webMain.css">
+    <link rel='stylesheet' href="code\css\webMain.css">
     <title>Seok Hee "Christine" Hong Website</title>
     <!-- <title>index.html</title> -->
 
@@ -21,10 +21,10 @@
   <body>
 
         <div class="navBar">
-          <a href="index.html"><img src="img\shLogo.png" alt="SH Logo" id="logo"></img></a>
-          <a href="contact.html">CONTACT</a>
-          <a href="portfolio.html">PORTFOLIO</a>
-          <a href="webMain.html">HOME</a>
+          <a href="code\html\index.html"><img src="img\shLogo.png" alt="SH Logo" id="logo"></img></a>
+          <a href="code\html\contact.html">CONTACT</a>
+          <a href="code\html\portfolio.html">PORTFOLIO</a>
+          <a href="index.html">HOME</a>
         </div>
 
         <div align="center" class = "main">
