fixed navBar for all pages; fixed css links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img id='mainpic' src="img\shLogoWhite.png" alt="main picture"></img>
 
             <div class = "title">
-              <h1 id='name'>홍석희 == Seok Hee "Christine" Hong</h2>
+              <h1 id='name'>홍석희 == Seok Hee Hong</h2>
               <h2>Student - Programmer - Graphic Designer - Welder - Chocolate Lover</h3>
             </div>
         </div>
