--- a/code/html/comingsoon.html
+++ b/code/html/comingsoon.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href="comingsoon.css">
-    <script src="comingsoon.js"></script>
+    <link rel='stylesheet' href="code\css\comingsoon.css">
+    <script src="code\js\comingsoon.js"></script>
     <title>Web - Coming Soon</title>
   </head>
   <body>
     <div class="navBar">
-      <a href="index.html"><img src="img\shLogoWhite.png" alt="SH Logo" id="logo"></img></a>
-      <a href="contact.html">CONTACT</a>
-      <a href="portfolio.html">PORTFOLIO</a>
+      <a href="code\html\index.html"><img src="img\shLogo.png" alt="SH Logo" id="logo"></img></a>
+      <a href="code\html\contact.html">CONTACT</a>
+      <a href="code\html\portfolio.html">PORTFOLIO</a>
       <a href="index.html">HOME</a>
     </div>
 
