fixed navBar for realsies; fixed portfolio

--- a/code/html/ef2018.html
+++ b/code/html/ef2018.html
@@ -21,9 +21,9 @@
   </head>
   <body>
     <div class="navBar">
-      <a href="code\html\index.html"><img src="img\shLogo.png" alt="SH Logo" id="logo"></img></a>
-      <a href="code\html\contact.html">CONTACT</a>
-      <a href="code\html\portfolio.html">PORTFOLIO</a>
+      <a href="index.html"><img src="..\..\img\shLogo.png" alt="SH Logo" id="logo"></img></a>
+      <a href="contact.html">CONTACT</a>
+      <a href="portfolio.html">PORTFOLIO</a>
       <a href="index.html">HOME</a>
     </div>
 
