--- a/code/html/index.html
+++ b/code/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!-- <meta http-equiv="refresh" content="0; url=webMain.html" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href="code\css\webMain.css">
+    <link rel='stylesheet' href="..\css\webMain.css">
     <title>Seok Hee "Christine" Hong Website</title>
     <!-- <title>index.html</title> -->
 
@@ -20,15 +20,15 @@
   </head>
   <body>
 
-        <div class="navBar">
-          <a href="code\html\index.html"><img src="img\shLogo.png" alt="SH Logo" id="logo"></img></a>
-          <a href="code\html\contact.html">CONTACT</a>
-          <a href="code\html\portfolio.html">PORTFOLIO</a>
-          <a href="index.html">HOME</a>
-        </div>
+    <div class="navBar">
+      <a href="index.html"><img src="img\shLogo.png" alt="SH Logo" id="logo"></img></a>
+      <a href="contact.html">CONTACT</a>
+      <a href="portfolio.html">PORTFOLIO</a>
+      <a href="index.html">HOME</a>
+    </div>
 
         <div align="center" class = "main">
-            <img id='mainpic' src="img\shLogoWhite.png" alt="main picture"></img>
+            <img id='mainpic' src="..\..\img\shLogoWhite.png" alt="main picture"></img>
 
             <div class = "title">
               <h1 id='name'>홍석희 == Seok Hee Hong</h2>
