--- a/code/html/contact.html
+++ b/code/html/contact.html
@@ -23,9 +23,9 @@
 
 
     <div class="navBar">
-      <a href="code\html\index.html"><img src="img\shLogo.png" alt="SH Logo" id="logo"></img></a>
-      <a href="code\html\contact.html">CONTACT</a>
-      <a href="code\html\portfolio.html">PORTFOLIO</a>
+      <a href="index.html"><img src="..\..\img\shLogo.png" alt="SH Logo" id="logo"></img></a>
+      <a href="contact.html">CONTACT</a>
+      <a href="portfolio.html">PORTFOLIO</a>
       <a href="index.html">HOME</a>
     </div>
 
