--- a/code/html/portfolio.html
+++ b/code/html/portfolio.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel='stylesheet' href="code\css\portfolio.css">
+    <link rel='stylesheet' href="..\css\portfolio.css">
     <title>Web - Portfolio</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -22,9 +22,9 @@
 
   <body>
     <div class="navBar">
-      <a href="code\html\index.html"><img src="img\shLogo.png" alt="SH Logo" id="logo"></img></a>
-      <a href="code\html\contact.html">CONTACT</a>
-      <a href="code\html\portfolio.html">PORTFOLIO</a>
+      <a href="index.html"><img src="..\..\img\shLogo.png" alt="SH Logo" id="logo"></img></a>
+      <a href="contact.html">CONTACT</a>
+      <a href="portfolio.html">PORTFOLIO</a>
       <a href="index.html">HOME</a>
     </div>
 
