fixed everything but the videos

--- a/code/html/contact.html
+++ b/code/html/contact.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel='stylesheet' href="code\css\contact.css">
+    <link rel='stylesheet' href="..\css\contact.css">
     <title>Web - Contact</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -35,28 +35,10 @@
         </div>
 
         <div class = "intro" style="font: Ariel">
-          <h3>Hi! This is Seok Hee speaking, and I welcome you to my humble website!</h3>
-          <h3>Let me tell you a bit about myself...</h3>
-          <p>I'm a <span>senior</span> at <span><a href="http://www.columbushighga.org/chs1/">Columbus High School</a> [Class of
-            2019]</span>, preparing myself to finish up my senior year nicely for college! I currently live in Columbus, Georgia,
-            but I come from Seoul, South Korea.
+          <h3>Hi, my name is Seok Hee Hong. Some of you may know me as Christine, welcome!</h3>
+          <p>I'm a <span>sophomore</span> at <span><a href="http://https://www.vanderbilt.edu/">Vanderbilt University</a> [Class of
+            2023]</span>.
             </p>
-
-            <p>I have a very diverse skills set because of my never-ending curiousity. I speak <span>Korean</span> and <span>English
-            </span> quite fluently (the former more than the latter), and I'm in the process of learning <span>Spanish</span> (third
-             year ongoing). I'm a <span>pianist</span> (6 years) and a <span>clarinetist</span> (4 years), and soon-to-be <span>
-             violist</span>- that being said, the <span>viola</span>, not the violin!
-             </p>
-
-            <p>As for extracurriculars, you're looking at the <span>captain</span> of the air rifle team and the
-               <span>Chief Engineering Officer</span> of the robotics team!</p>
-
-            <p> I practice <span>air riflery</span>, which my team has been the top of our district for the past
-             few years. I'm also very involved in <span>robotics</span>, shoutout to FRC 4188, the Columbus Space Program, where I am
-             mastering the art of <span>tig welding</span> (mostly Alumnimum), <span>electronics</span>, and <span>business/operations
-             </span>. I am also a part of honor socities: <span>Spanish National Honor Society, English National Honor Society, Science
-             National Honor Society, Beta Club and Mu Alpha Theta</span> (Math Honor Society).
-          </p>
         </div>
 
       <div class="social">
@@ -69,9 +51,9 @@
       <br>
 
       <h2>Find me on social media!</h2>
-      <a href="https://www.facebook.com/seokheehong1"><img src="img\Facebook.png" alt="Facebook logo"></img></a>
-      <a href="https://www.instagram.com/christine_hong2/"><img src="img\Instagram.png" alt="Instagram logo"></img></a>
-      <a href="https://twitter.com/christine_hong2"><img src="img\Twitter.png" alt="Twitter logo"></img></a>
+      <a href="https://www.facebook.com/seokheehong1"><img src="..\..\img\Facebook.png" alt="Facebook logo"></img></a>
+      <a href="https://www.instagram.com/christine_hong1/"><img src="..\..\img\Instagram.png" alt="Instagram logo"></img></a>
+      <a href="https://twitter.com/christine_hong1"><img src="..\..\img\Twitter.png" alt="Twitter logo"></img></a>
 
     </div>
 
