--- a/code/html/ghp.html
+++ b/code/html/ghp.html
@@ -6,8 +6,8 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <link rel='stylesheet' href="code\css\ghp.css">
-      <script src="ghp.js"></script>
+      <link rel='stylesheet' href="..\css\ghp.css">
+      <script src="..\js\ghp.js"></script>
     <title>Web - GHP</title>
   </head>
   <body>
@@ -68,18 +68,12 @@
       </div>
       <div class="col-sm-6">
         <div class="PApics">
-          <img src="img/ghp/group.jpg" alt="GHP group members" height="80%" width="80%">
+          <img src="../../img/ghp/group.jpg" alt="GHP group members" height="80%" width="80%">
           <p>Group picture with the most amazing engineers at GHP :)</p>
           <br><br>
-          <video width="400" controls>
-            <source src="img/ghp/testing.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-          </video>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Pp7GEw7ds78" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <p>Testing EMG sensors and graphing values.</p>
-          <video width="400" controls>
-            <source src="img/ghp/PAvideo.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-          </video>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/6TSk5LLdgbM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <p>Video Compilation of Programming Process</p>
         </div>
       </div>
@@ -89,13 +83,13 @@
     <h2>Source Code for ESP8266</h2>
     <div class="row">
       <div class="column">
-        <img src="img/ghp/PA1.png" alt="ESP8266 Code 1" style="width:100%" onclick="myFunction(this);">
+        <img src="../../img/ghp/PA1.png" alt="ESP8266 Code 1" style="width:100%" onclick="myFunction(this);">
       </div>
       <div class="column">
-        <img src="img/ghp/PA2.png" alt="ESP8266 Code 2" style="width:100%" onclick="myFunction(this);">
+        <img src="../../img/ghp/PA2.png" alt="ESP8266 Code 2" style="width:100%" onclick="myFunction(this);">
       </div>
       <div class="column">
-        <img src="img/ghp/PA3.png" alt="ESP8266 Code 3" style="width:100%" onclick="myFunction(this);">
+        <img src="../../img/ghp/PA3.png" alt="ESP8266 Code 3" style="width:100%" onclick="myFunction(this);">
       </div>
     </div>
     <!-- The expanding image container -->
