--- a/code/html/rifle.html
+++ b/code/html/rifle.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <link rel='stylesheet' href="code\css\portfolio.css">
+      <link rel='stylesheet' href="..\css\portfolio.css">
     <title>Web - GHP</title>
   </head>
   <body>
@@ -20,23 +20,21 @@
 
 
     <div class="rifle">
-      <img src="img\rifle\teampic2.jpeg" style='width:100%;' border="0" alt="Null">
       <h1>Rifle</h1>
       <h2>Since : August 2015</h2>
 
     </div>
-
+<!-- 
     <p>
-
         rifle
     </p>
 
     <div class="positions">
       <h3>The Three Positions of Air Riflery</h3>
-      <img src="img\rifle\prone1.jpeg" alt="Prone 1">
-      <img src="img\rifle\standing.jpeg" alt="Prone 1">
-      <img src="img\rifle\kneeling1.jpeg" alt="Prone 1">
-    </div>
+      <img src="..\..\img\rifle\prone1.jpeg" alt="Prone">
+      <img src="..\..\img\rifle\standing.jpeg" alt="Standing">
+      <img src="..\..\img\rifle\kneeling1.jpeg" alt="Kneeling">
+    </div> -->
 
     <div class="col-sm-12">
     <footer style="text-align: center">Copyright &copy; Seok Hee Christine Hong, 2017. All Rights Reserved. </footer>
