--- a/code/html/welding.html
+++ b/code/html/welding.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <link rel='stylesheet' href="code\css\portfolio.css">
+      <link rel='stylesheet' href="..\css\portfolio.css">
     <title>Web - Welding</title>
   </head>
   <body>
