--- a/code/html/research.html
+++ b/code/html/research.html
@@ -32,10 +32,7 @@
 
     <div class="researchBuild">
       <h3>Building Process</h3>
-      <video width="400" controls>
-        <source src="img/research/building2.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-      </video>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/0lUslS1Zfs0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 <br><br>
     <div class="ResearchPaper">
