rearrange files, font update, img updates

--- a/portfolio/comingsoon.html
+++ b/portfolio/comingsoon.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="navBar">
-      <a href="index.html"><img src="..\..\img\shLogo.png" alt="SH Logo" id="logo"></img></a>
-      <a href="contact.html">CONTACT</a>
-      <a href="portfolio.html">PORTFOLIO</a>
-      <a href="index.html">HOME</a>
+      <a href="..\index.html"><img src="..\img\shLogo.png" alt="SH Logo" id="logo"></img></a>
+      <a href="..\about.html">ABOUT</a>
+      <a href="..\portfolio.html">PORTFOLIO</a>
+      <a href="..\index.html">HOME</a>
     </div>
 
       <div class="loading">
