--- a/portfolio/ghp.html
+++ b/portfolio/ghp.html
@@ -6,16 +6,16 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <link rel='stylesheet' href="..\css\ghp.css">
+      <link rel='stylesheet' href="..\styles\ghp.css">
       <script src="..\js\ghp.js"></script>
     <title>Web - GHP</title>
   </head>
   <body>
     <div class="navBar">
-      <a href="index.html"><img src="..\..\img\shLogo.png" alt="SH Logo" id="logo"></img></a>
-      <a href="contact.html">CONTACT</a>
-      <a href="portfolio.html">PORTFOLIO</a>
-      <a href="index.html">HOME</a>
+      <a href="..\index.html"><img src="..\img\shLogo.png" alt="SH Logo" id="logo"></img></a>
+      <a href="..\about.html">ABOUT</a>
+      <a href="..\portfolio.html">PORTFOLIO</a>
+      <a href="..\index.html">HOME</a>
     </div>
 
     <div class="ghpTitle">
@@ -68,7 +68,7 @@
       </div>
       <div class="col-sm-6">
         <div class="PApics">
-          <img src="../../img/ghp/group.jpg" alt="GHP group members" height="80%" width="80%">
+          <img src="../img/ghp/group.jpg" alt="GHP group members" height="80%" width="80%">
           <p>Group picture with the most amazing engineers at GHP :)</p>
           <br><br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/Pp7GEw7ds78" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -83,13 +83,13 @@
     <h2>Source Code for ESP8266</h2>
     <div class="row">
       <div class="column">
-        <img src="../../img/ghp/PA1.png" alt="ESP8266 Code 1" style="width:100%" onclick="myFunction(this);">
+        <img src="../img/ghp/PA1.png" alt="ESP8266 Code 1" style="width:100%" onclick="myFunction(this);">
       </div>
       <div class="column">
-        <img src="../../img/ghp/PA2.png" alt="ESP8266 Code 2" style="width:100%" onclick="myFunction(this);">
+        <img src="../img/ghp/PA2.png" alt="ESP8266 Code 2" style="width:100%" onclick="myFunction(this);">
       </div>
       <div class="column">
-        <img src="../../img/ghp/PA3.png" alt="ESP8266 Code 3" style="width:100%" onclick="myFunction(this);">
+        <img src="../img/ghp/PA3.png" alt="ESP8266 Code 3" style="width:100%" onclick="myFunction(this);">
       </div>
     </div>
     <!-- The expanding image container -->
