--- a/portfolio/ef2018.html
+++ b/portfolio/ef2018.html
@@ -6,25 +6,15 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <link rel='stylesheet' href="..\css\portfolio.css">
+      <link rel='stylesheet' href="..\styles\portfolio.css">
     <title>Web - EF 2018</title>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126011326-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-126011326-1');
-    </script>
   </head>
   <body>
     <div class="navBar">
-      <a href="index.html"><img src="..\..\img\shLogo.png" alt="SH Logo" id="logo"></img></a>
-      <a href="contact.html">CONTACT</a>
-      <a href="portfolio.html">PORTFOLIO</a>
-      <a href="index.html">HOME</a>
+      <a href="..\index.html"><img src="..\img\shLogo.png" alt="SH Logo" id="logo"></img></a>
+      <a href="..\about.html">ABOUT</a>
+      <a href="..\portfolio.html">PORTFOLIO</a>
+      <a href="..\index.html">HOME</a>
     </div>
 
     <div class="efTitle">
